Add &lt; HTML entities for the button and semantic tags for figure and figcaption

--- a/assignment_lists/assignment_lists.html
+++ b/assignment_lists/assignment_lists.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +7,13 @@
     <!-- Title -->
     <title>Assignment Lists</title>
 </head>
-
 <body>
     <!-- Main Section -->
     <main>
         <h1> Assignment Lists </h1>
         <!-- Unordered shopping list  -->
         <div>
-            <h2><i> Unordered shopping list of my favorite foods <i></i></h2>
+            <h2><i> List of my favorite foods <i></i></h2>
             <ul>
                 <li> Milk </li>
                 <li> Eggs </li>
@@ -43,7 +41,7 @@
 
         <!-- ordered todo's list  -->
         <div>
-            <h2><i> Ordered list of todo’s I need to get done today <i></i></h2>
+            <h2><i> List of todo’s I need to get done today <i></i></h2>
             <ol>
                 <li> Go to the gym </li>
                 <li> Do my shopping </li>
@@ -62,9 +60,7 @@
                 <li> New York </li>
                 <li> Tokyo </li>
                 <ul>
-                    <li> Paris </li>
                     <li> Rome </li>
-                    <li> London </li>
                     <li> San Francisco </li>
                     <li> Sydney </li>
                     <li> Rio de Janeiro </li>
@@ -77,7 +73,7 @@
 
         <!-- ordered list inside of an unordered list,  -->
         <div>
-            <h2><i> Places I would like to visit someday <i></i></h2>
+            <h2>My 5 favorite video games </h2>
             <ul>
                 <li>5 Great Video Games Ever
                     <ol>
@@ -93,7 +89,7 @@
 
         <!-- Go back button -->
         <div>
-            <a href="/pedro_brainnest_html/index.html"> Go Back </a>
+            <a href="../index.html"> &lt; Go Back </a>
         </div>
     </main>
 </body>
