--- a/html_terminology_definitions/html_terminology_definitions.html
+++ b/html_terminology_definitions/html_terminology_definitions.html
@@ -6,20 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>HTML Terminology & Definitions</title>
+    <title> HTML Terminology & Definitions </title>
 </head>
 
 <body>
     <!-- Main -->
     <main>
-        <h1>HTML Terminology & Definitions</h1>
+        <h1> HTML Terminology & Definitions </h1>
         <!-- ordered list with questions and answers -->
         <div>
             <ol>
                 <li>
                     <h2> What do HTML and CSS stand for? </h2>
                     <p><em> Answer: </em> HTML stands for HyperText Markup Language, and CSS stands for Cascading Style
-                        Sheets. </p>
+                        Sheets. 
+                    </p>
                 </li>
                 <li>
                     <h2> Would you rather use HTML or CSS, for putting paragraphs of text on a webpage? </h2>
@@ -32,14 +33,15 @@
                 <li>
                     <h2> What is an HTML tag? </h2>
                     <p><em> Answer: </em> An HTML tag is a code that is used to mark the beginning and end of an HTML
-                        element. </p>
+                        element. 
+                    </p>
                 </li>
                 <li>
                     <h2> What are the three parts of an HTML element? </h2>
                     <p><em> Answer: </em> The three parts of an HTML element are the opening tag, the content, and the
-                        closing tag. For example: <code>&lt;p&gt;This is the content&lt;/p&gt;</code> The opening tag is
-                        <code>&lt;p&gt;</code>, the content is <code>This is the content</code>, and the closing tag is
-                        <code>&lt;/p&gt;</code>.
+                        closing tag. For example: &lt;p&gt;This is the content&lt;/p&gt; The opening tag is
+                        &lt;p&gt;, the content is This is the content, and the closing tag is
+                        &lt;/p&gt;.
                     </p>
                 </li>
                 <li>
@@ -58,8 +60,8 @@
                     <p><em> Answer: </em> The head element is used to contain information about the document that is not
                         directly related to the content of the page. This includes things like the title of the
                         document, links to external stylesheets and scripts, and meta information such as keywords and
-                        descriptions. The head element is represented by the
-                        &lt;head> tag and should be the first element within the HTML element.
+                        descriptions. The head element is represented by the &lt;head> tag and should be the first element 
+                        within the HTML element.
                     </p>
                 </li>
                 <li>
@@ -72,50 +74,53 @@
                 </li>
                 <li>
                     <h2> How do you create a paragraph in HTML? </h2>
-                    <p><em> Answer: </em> To create a paragraph in HTML, you can use the &lt;p> element. For example:
+                    <p><em> Answer: </em> To create a paragraph in HTML, you can use the &lt;p> element. For example: </p>
+                    <pre><code> &lt;p>This is a paragraph.&lt;/p> </code></pre>
+                </li>
+                <li>
+                    <h2> How do you create a heading in HTML? </h2>
+                    <p><em> Answer: </em> To create a heading in HTML, you can use one of the heading elements: &lt;h1>,
+                        &lt;h2>, &lt;h3>, &lt;h4>, &lt;h5>, or &lt;h6>. The heading elements range in size, with &lt;h1> 
+                        being the largest and &lt;<h6> being the smallest. For example:
                     </p>
-                    <pre><code>&lt;p>This is a paragraph.&lt;/p></code></pre>
+                    <pre><code> &lt;h1>This is a heading&lt;/h1> </code></pre>
                 </li>
                 <li>
-                    <h2>How do you create a heading in HTML?</h2>
-                    <p><em>Answer:</em> To create a heading in HTML, you can use one of the heading elements: &lt;h1>,
-                        &lt;h2>,
-                        &lt;h3>, &lt;h4>, &lt;h5>, or &lt;h6>. The heading elements range in size, with &lt;h1> being
-                        the largest and <code>&lt;<h6> being the smallest. For example:</p>
-                    <pre><code>&lt;h1>This is a heading&lt;/h1></code></pre>
-                </li>
-                <li>
-                    <h2> How many different levels of headings are there and what is the difference between them ?</h2>
+                    <h2> How many different levels of headings are there and what is the difference between them? </h2>
                     <p><em> Answer: </em> There are six levels of headings in HTML, numbered from 1 to 6. The difference
                         between the heading levels is the relative size of the text. Heading level 1
-                        &lt;h1> is the largest, and heading level 6 &lt;h6> is the smallest. </p>
+                        &lt;h1> is the largest, and heading level 6 &lt;h6> is the smallest. 
+                    </p>
                 </li>
                 <li>
-                    <h2>What element should you use to make text bold and important?</h2>
-                    <p><em>Answer:</em> To make text bold and important, you can use the &lt;strong> element. You can
-                        also use the &lt;b> element for bold
-                        text, although the &lt;strong> element is considered more semantically correct as it indicates
-                        that the text is important. For example:</p>
-                    <pre><code>&lt;strong>This text is important and bold.&lt;/strong></code></pre>
+                    <h2> What element should you use to make text bold and important? </h2>
+                    <p><em> Answer: </em> To make text bold and important, you can use the &lt;strong> element. You can
+                        also use the &lt;b> element for bold text, although the &lt;strong> element is considered more 
+                        semantically correct as it indicates that the text is important. For example:
+                    </p>
+                    <pre><code> &lt;strong>This text is important and bold.&lt;/strong> </code></pre>
                 </li>
                 <li>
                     <h2> What element should you use to make text italicized to add emphasis to it? </h2>
-                    <p><em> Answer: </em> To make text italicized to add emphasis to it, you can use the `<em>` element.
-                            You can also use the `<i>` element for italicized text, although the `<em>` element is
-                                    considered more semantically correct as it indicates that the text should be
-                                    emphasized. For example: </p>
-                    <pre><code>&lt;em>This text is emphasized and italicized.&lt;/em></code></pre>
+                    <p><em> Answer: </em> To make text italicized to add emphasis to it, you can use the &lt;em> 
+                        element. You can also use the &lt;i> element for italicized text, although the &lt;em> 
+                        element is considered more semantically correct as it indicates that the text should be 
+                        emphasized. For example: 
+                    </p>
+                    <pre><code> &lt;em>This text is emphasized and italicized.&lt;/em> </code></pre>
                 </li>
                 <li>
-                    <h2>What relationship does an element have with any nested elements within it?</h2>
-                    <p><em>Answer:</em> An element that has other elements nested within it is called the parent
+                    <h2> What relationship does an element have with any nested elements within it? </h2>
+                    <p><em> Answer: </em> An element that has other elements nested within it is called the parent
                         element, and the nested elements are called child elements. The parent element and child
-                        elements have a parent-child relationship.</p>
+                        elements have a parent-child relationship.
+                    </p>
                 </li>
                 <li>
-                    <h2>What relationship do two elements have if they are at the same level of nesting?</h2>
-                    <p><em>Answer:</em> Two elements that are at the same level of nesting are called sibling elements.
-                        Sibling elements have a sibling relationship.</p>
+                    <h2> What relationship do two elements have if they are at the same level of nesting? </h2>
+                    <p><em> Answe: </em> Two elements that are at the same level of nesting are called sibling elements.
+                        Sibling elements have a sibling relationship.
+                    </p>
                 </li>
                 <li>
                     <h2> How do you create HTML comments? </h2>
@@ -128,13 +133,17 @@
                     <h2> What HTML tag is used to create an unordered list? </h2>
                     <p><em> Answer: </em> To create an unordered list in HTML, you can use the
                         <code>&lt;ul>` element. This element represents an unordered list of items, 
-                        which are typically displayedwith bullet points. For example: </p>
+                        which are typically displayedwith bullet points. For example: 
+                    </p>
                     <pre>
-                     <code>&lt;ul>
-                      &lt;li> Item 1 &lt;/li>
-                      &lt;li> Item 2 &lt;/li>
-                      &lt;li> Item 3 &lt;/li>
-                     &lt;/ul></code></pre>
+                        <code> 
+                          &lt;ul>
+                            &lt;li> Item 1 &lt;/li>
+                            &lt;li> Item 2 &lt;/li>
+                            &lt;li> Item 3 &lt;/li>
+                          &lt;/ul>
+                        </code>
+                    </pre>
                 </li>
                 <li>
                     <h2> What HTML tag is used to create an ordered list? </h2>
@@ -143,37 +152,42 @@
                         of items, which are typically displayed with numbers or letters. For example:
                     </p>
                     <pre>
-                    <code>&lt;ol>
-                     &lt;li> 1 . Item &lt;/li>
-                     &lt;li> 2 . Item &lt;/li>
-                     &lt;li> 3 . Item &lt;/li>
-                    &lt;/ol></code></pre>
+                        <code>
+                          &lt;ol>
+                            &lt;li> 1 . Item &lt;/li>
+                            &lt;li> 2 . Item &lt;/li>
+                            &lt;li> 3 . Item &lt;/li>
+                          &lt;/ol>
+                        </code>
+                    </pre>
                 </li>
                 <li>
-                    <h2>What HTML tag is used to create list items within both unordered and ordered lists?</h2>
-                    <p><em>Answer:</em> To create list items within both unordered and ordered lists in HTML, you can
-                        use the &lt;li> element. This element
-                        represents a list item. For example:
+                    <h2> What HTML tag is used to create list items within both unordered and ordered lists? </h2>
+                    <p><em> Answer: </em> To create list items within both unordered and ordered lists in HTML, you can
+                        use the &lt;li> element. This element represents a list item. For example:
                     </p>
                     <pre>
-                    <code>&lt;ul>
-                     &lt;li> Item 1 &lt;/li>
-                     &lt;li> Item 2 &lt;/li>
-                     &lt;li> Item 3 &lt;/li>
-                    &lt;/ul>
+                        <code>
+                          &lt;ul>
+                            &lt;li> Item 1 &lt;/li>
+                            &lt;li> Item 2 &lt;/li>
+                            &lt;li> Item 3 &lt;/li>
+                          &lt;/ul>
             
-                    &lt;ol>
-                    &lt;li> 1 . Item &lt;/li>
-                    &lt;li> 2 . Item &lt;/li>
-                    &lt;li> 3 . Item &lt;/li>
-                    &lt;/ol></code></pre>
+                          &lt;ol>
+                            &lt;li> 1 . Item &lt;/li>
+                            &lt;li> 2 . Item &lt;/li>
+                            &lt;li> 3 . Item &lt;/li>
+                          &lt;/ol>
+                        </code>
+                    </pre>
                 </li>
                 <li>
                     <h2> What element is used to create a link? </h2>
-                    <p><em> Answer :</em> To create a link in HTML, you can use the <code>&lta> element. This element represents a hyperlink, which allows users to 
+                    <p><em> Answer :</em> To create a link in HTML, you can use the &lt;a> element. This element represents a hyperlink, which allows users to 
                         navigate to another webpage or a specific location on the same webpage. For example: 
                     </p>
-                    <pre><code>&lt;a href="http://www.example.com">This is a link&lt;/a></code></pre>
+                    <pre><code> &lt;a href="http://www.example.com">This is a link&lt;/a> </code></pre>
                 </li>
                 <li>
                     <h2> What is an attribute? </h2>
@@ -181,17 +195,16 @@
                         information about the element. Attributes are typically
                         specified in the start tag of an element and take the form of a name-value pair. For example:
                     </p>
-                    <pre><code>&lt;a href="http://www.example.com">This is a link&lt;/a></code></pre>
+                    <pre><code> &lt;a href="http://www.example.com">This is a link&lt;/a> </code></pre>
                 </li>
                 <li>
-                    <h2>What attribute tells links where to go?</h2>
-                    <p><em>Answer:</em> The "href" attribute tells links where to go.</p>
+                    <h2> What attribute tells links where to go ?</h2>
+                    <p><em> Answer: </em> The "href" attribute tells links where to go. </p>
                 </li>
                 <li>
                     <h2> What is the difference between an absolute and relative link? </h2>
-                    <p><em> Answer: </em> An absolute link specifies the full URL of a webpage or resource, while a
-                        relative link specifies the location of a
-                        webpage or resource relative to the current webpage.
+                    <p><em> Answer: </em> An absolute link specifies the full URL of a webpage or resource, while 
+                        arelative link specifies the location of a webpage or resource relative to the current webpage.
                     </p>
                 </li>
                 <li>
@@ -200,9 +213,9 @@
                 </li>
                 <li>
                     <h2> What two attributes do images always need to have? </h2>
-                    <p><em>Answer:</em> Images always need to have the "src" attribute (which specifies the source file
-                        for the image) and the "alt" attribute
-                        (which specifies alternative text for the image in case it cannot be displayed).
+                    <p><em> Answer: </em> Images always need to have the "src" attribute (which specifies the source file
+                        for the image) and the "alt" attribute (which specifies alternative text for the image in case 
+                        it cannot be displayed).
                     </p>
                 </li>
                 <li>
@@ -222,7 +235,7 @@
 
         <!-- Go back button -->
         <div>
-            <a href="/pedro_brainnest_html/index.html"> Go Back </a>
+            <a href="../index.html"> &lt; Go Back </a>
         </div>
     </main>
 </body>
