--- a/links-and-images/links-and-images-index.html
+++ b/links-and-images/links-and-images-index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
     <!-- Title -->
     <title> Links & Images </title>
 </head>
-
 <body>
     <!-- Main Section -->
     <main>
@@ -23,13 +21,17 @@
 
         <!-- img container -->
         <div>
-            <img src="./images/firts-img.png" alt="HTML logo">
+            <figure>
+                <img src="./images/firts-img.png" alt="HTML logo">
+                <br><br>
+                <figcaption> HTML LOGO </figcaption>
+            </figure>
             <br><br>
         </div>
 
         <!-- Go back button -->
         <div>
-            <a href="/pedro_brainnest_html/index.html"> Go Back </a>
+            <a href="../index.html"> &lt; Go Back </a>
         </div>
     </main>
 </body>
