--- a/links-and-images/pages/about.html
+++ b/links-and-images/pages/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,26 +7,27 @@
     <!-- Title -->
     <title> About </title>
 </head>
-
 <body>
     <!-- Main Section -->
     <main>
         <h1> About Page </h1>
-        <p> In HTML, links and images are two important elements that allow us to connect and enrich our content. Links,
-            or hyperlinks, allow us to navigate to other web pages or to specific locations within the same page. They
-            are created using the anchor tag, (a), and the href attribute, which specifies the destination URL. Images,
-            on the other hand, are used to display pictures and graphics on a web page. They are inserted using the
-            (img) tag, which requires the src attribute to specify the image file's location. We can also use the
-            alt attribute to provide a text alternative for the image, which is useful for accessibility purposes
-            and for when the image is unable to be displayed. By using these elements effectively, we can create
-            engaging and interactive content for our users. </p>
+       <article>
+           <p> In HTML, links and images are two important elements that allow us to connect and enrich our content. Links,
+               or hyperlinks, allow us to navigate to other web pages or to specific locations within the same page. They
+               are created using the anchor tag, (a), and the href attribute, which specifies the destination URL. Images,
+               on the other hand, are used to display pictures and graphics on a web page. They are inserted using the
+               (img) tag, which requires the src attribute to specify the image file's location. We can also use the
+               alt attribute to provide a text alternative for the image, which is useful for accessibility purposes
+               and for when the image is unable to be displayed. By using these elements effectively, we can create
+               engaging and interactive content for our users. 
+           </p>
             <br><br>
+       </article>
 
         <!-- Go back button -->
         <div>
-            <a href="../links-and-images-index.html"> Go Back </a>
+            <a href="../links-and-images-index.html"> &lt; Go Back </a>
         </div>
     </main>
 </body>
-
 </html>
