Add link to open the main HTML project

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <li><a href="./links-and-images/links-and-images-index.html"> Links & Images </a></li>
             <br><br>
             <li><a href="./html_terminology_definitions/html_terminology_definitions.html"> HTML Terminology & Definitions </a></li>
+            <br><br>
+            <li><a href="https://pedrocristo.github.io/pedro_brainnest_html_main_project/index.html"> HTML Main Project </a></li>
         </ul>
     </main>
 </body>
